sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: illegal start of simple expression
    var a = 0
    ^AlgBubbleSort2:16: error: Unmatched closing brace '}' ignored here
}
^