sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var nbLignes=0
  for(i<-0 to getNombreValeurs())
    var a = 0
    var b = 0
    for (i <-0 to getNombreValeurs()-2) {
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        estTriee=false
      }
    }
  }
}